--- a/config.toml
+++ b/config.toml
@@ -103,7 +103,7 @@ paginate = 10
     # Enable the contact form by entering your Formspree.io email
     # email = "your@email.com"
 
-    about_us = "<p>Our vision is a scientific culture that is more efficient and collaborative, and can uncover environmental solutions faster. Openscapes is operated by the National Center for Ecological Analysis & Synthesis (NCEAS) and was incubated by a Mozilla Fellowship awarded to Julia Stewart Lowndes.</p>"
+    about_us = "<p>Our vision is a scientific culture that is more efficient and collaborative, and can uncover environmental solutions faster. Openscapes was incubated by NCEAS and a Mozilla Fellowship awarded to Julia Stewart Lowndes.</p>"
     copyright = "<a rel='license' href='http://creativecommons.org/licenses/by/4.0/'><img alt='Creative Commons License' style='border-width:0' src='https://i.creativecommons.org/l/by/4.0/88x31.png' /></a>&nbsp;&nbsp;Openscapes is licensed under a <a rel='license' href='http://creativecommons.org/licenses/by/4.0/'>Creative Commons Attribution 4.0 International License</a>."
 
     # Format dates with Go's time formatting
@@ -200,8 +200,8 @@ paginate = 10
     # All clients are defined in their own files. You can find example items
     # at 'exampleSite/data/clients'.
     # For more informtion take a look at the README.
-    title = "Operated by NCEAS and incubated by Mozilla"
-    subtitle = "Openscapes bridges environmental synthesis science with the open movement. Learn more [about us](/about/)."
+    title = "Incubated by Mozilla and NCEAS"
+    subtitle = "Openscapes bridges data-intensive environmental science with the open movement. Learn more [about us](/about/)."
 
 [params.recent_posts]
     enable = true
